// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImportProgress rendering states should render a state for end 1`] = `
<Fragment>
  <div
    className="alert alert-info"
  >
    <Icon
      icon="check"
      size="2x"
    />
    <div
      className="force-ltr"
    >
      <Translate
        translationKey="Import completed"
      >
        Import completed. Number of entities created:
      </Translate>
       
      5
      <br />
      <Translate>
        Indexing entities may take a few minutes
      </Translate>
    </div>
    <Icon
      icon="times"
      onClick={[Function]}
      style={
        Object {
          "cursor": "pointer",
        }
      }
    />
  </div>
</Fragment>
`;

exports[`ImportProgress rendering states should render a state for end with row exceptions 1`] = `
<Fragment>
  <div
    className="alert alert-info"
  >
    <Icon
      icon="check"
      size="2x"
    />
    <div
      className="force-ltr"
    >
      <Translate
        translationKey="Import completed"
      >
        Import completed. Number of entities created:
      </Translate>
       
      5
      <br />
      <Translate>
        Indexing entities may take a few minutes
      </Translate>
    </div>
    <Icon
      icon="times"
      onClick={[Function]}
      style={
        Object {
          "cursor": "pointer",
        }
      }
    />
  </div>
  <div>
    <div
      className="alert alert-warning"
    >
      <Icon
        icon="exclamation-triangle"
        size="2x"
      />
      <Translate>
        The import process threw some warnings:
      </Translate>
    </div>
    <div
      className="alert"
    >
      <div
        key="Sanitized entries skipped in import"
      >
        <Translate>
          Sanitized entries skipped in import
          :
        </Translate>
        <div
          className="item-info"
          key="Sanitized entries skipped in import-0-0"
        >
          <strong>
            <Translate>
              Row
            </Translate>
          </strong>
          : 
          1
           -
           
          <strong>
            <Translate>
              Property
            </Translate>
          </strong>
          : 
          select_with_spaces
           -
           
          <strong>
            <Translate>
              Value
            </Translate>
          </strong>
          : 
           Item2 
        </div>
      </div>
      <div
        key="Another warning type"
      >
        <Translate>
          Another warning type
          :
        </Translate>
        <div
          className="item-info"
          key="Another warning type-1-0"
        >
          <strong>
            <Translate>
              Row
            </Translate>
          </strong>
          : 
          2
           -
           
          <strong>
            <Translate>
              Property
            </Translate>
          </strong>
          : 
          another_property
           -
           
          <strong>
            <Translate>
              Value
            </Translate>
          </strong>
          : 
          invalid_value
        </div>
      </div>
    </div>
  </div>
</Fragment>
`;

exports[`ImportProgress rendering states should render a state for errors 1`] = `
<div>
  <div
    className="alert alert-danger"
  >
    <Icon
      icon="exclamation-triangle"
      size="2x"
    />
    <div
      className="force-ltr"
    >
      <Translate>
        The import process threw an error:
      </Translate>
    </div>
    <Icon
      icon="times"
      onClick={[Function]}
      style={
        Object {
          "cursor": "pointer",
        }
      }
    />
  </div>
  <StackTrace
    message="Something bad happened"
    validations={null}
  />
</div>
`;

exports[`ImportProgress rendering states should render a state for errors 2`] = `
<div>
  <div
    className="alert alert-danger"
  >
    <Icon
      icon="exclamation-triangle"
      size="2x"
    />
    <div
      className="force-ltr"
    >
      <Translate>
        The import process threw an error:
      </Translate>
    </div>
    <Icon
      icon="times"
      onClick={[Function]}
      style={
        Object {
          "cursor": "pointer",
        }
      }
    />
  </div>
  <StackTrace
    message="validation error"
    validations={
      Immutable.List [
        Immutable.Map {
          "message": "should be number",
          "instancePath": ".metadata['number']",
          "schemaPath": "#/metadataMatchesTemplateProperties",
        },
      ]
    }
  />
</div>
`;

exports[`ImportProgress rendering states should render a state for normal progress 1`] = `
<div
  className="alert alert-info"
>
  <Icon
    icon="cog"
    size="2x"
  />
  <div
    className="force-ltr"
  >
    <Translate>
      Importing data in progress
    </Translate>
    : 
    5
  </div>
</div>
`;
